--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -12,15 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: [ '2.5', '2.6', '2.7', '3.0' ]
+        ruby: [ '3.4.6' ]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Set up Ruby version specified in `.ruby-version`
       with:
-        ruby-version: ${{ matrix.ruby }}
-      uses: eregon/use-ruby-action@master
+        ruby-version: .ruby-version
+      uses: ruby/setup-ruby@v1
 
     - name: Install dependencies
       run:  bundle install --jobs 4 --retry 3
