--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,17 +18,9 @@ Gemspec/RequiredRubyVersion:
 Layout/DotPosition:
   EnforcedStyle: trailing
 
-Layout/SpaceAroundMethodCallOperator:
-  Enabled: true
-
-Lint/RaiseException:
-  Enabled: true
-
-Lint/StructNewOverride:
-  Enabled: true
-
 Metrics/BlockLength:
-  IgnoredMethods: ['describe', 'context', 'feature', 'scenario', 'let']
+  Exclude:
+    - test/**/*
 
 RSpec/ExampleLength:
   Enabled: false
@@ -44,12 +36,3 @@ Style/Documentation:
 
 Style/ExponentialNotation:
   Enabled: false
-
-Style/HashEachMethods:
-  Enabled: true
-
-Style/HashTransformKeys:
-  Enabled: true
-
-Style/HashTransformValues:
-  Enabled: true
