--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Release Gem
-        uses: m4rcelotoledo/publish-rubygems-action@master
+        uses: m4rcelotoledo/publish-rubygems-action@v1
         env:
           RUBYGEMS_API_KEY: ${{secrets.RUBYGEMS_RELEASE}}
           GIT_EMAIL: automated_release@gmail.com
